<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HistoryFragment">

    <TextView
        android:id="@+id/txtHistoryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history_title"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/layoutControlPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtHistoryTitle"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPrevMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/history_prev_month" />

        <EditText
            android:id="@+id/txtYear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:inputType="number"
            android:hint="@string/history_hint_year"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/history_delimiter"/>

        <EditText
            android:id="@+id/txtMonth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:inputType="number"
            android:hint="@string/history_hint_month"/>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/history_search" />

        <Button
            android:id="@+id/btnNextMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/history_next_month" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutTableTop"
        android:layout_below="@+id/layoutControlPanel">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/common_category"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/history_property"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutTableTop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:descendantFocusability="blocksDescendants">

<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/category_view"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1" />-->

<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/prev_month_view"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1" />-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/current_month_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/next_month_view"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1" />-->
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
